test/test_units/test_kclvm/test_types/invalid_test_data/schema/schema_12.k
schema NamedMap:
    [str]: str

data = {
    key1: "value1"
    key2: "value2"
}

named_data = NamedMap {
    **data
    data: 1
}
